--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[66, 95, 32, 63, 21, 52, 3, 96, 84, 5, 61, 69, 62, 36, 53, 75, 70, 8, 11, 6, 17, 58, 50, 39, 67, 68, 79, 31, 0, 10, 7, 86, 20, 57, 13, 35, 91, 2, 23, 77, 64, 92, 29, 94, 48, 89, 26, 12, 65, 28, 43, 54, 37, 81, 44, 33, 78, 55, 97, 24, 71, 51, 38, 46, 25, 80, 59, 82, 40, 73, 76, 88, 83, 47, 85, 15, 93, 34, 41, 9]\n"
+      "[6, 70, 57, 89, 67, 24, 73, 72, 2, 43, 90, 20, 81, 27, 34, 71, 96, 82, 14, 22, 88, 64, 18, 66, 46, 9, 19, 91, 61, 86, 17, 48, 13, 98, 21, 35, 54, 16, 87, 58, 40, 85, 92, 79, 63, 15, 26, 5, 97, 53, 11, 95, 60, 1, 36, 37, 10, 39, 3, 7, 28, 12, 47, 52, 65, 83, 77, 32, 30, 76, 44, 75, 38, 50, 33, 51, 56, 49, 23, 45]\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[73, 75, 83, 66, 22, 86, 9, 75, 65, 32, 68, 46, 22, 55, 80, 22, 10, 21, 85, 59, 89, 65, 51, 35, 7, 69, 77, 89, 53, 83, 66, 63, 40, 36, 1, 21, 5, 26, 99, 22, 85, 80, 34, 61, 79, 63, 84, 37, 98, 91, 93, 37, 17, 77, 59, 76, 47, 70, 3, 41, 99, 81, 52, 7, 79, 98, 59, 77, 10, 51, 65, 7, 40, 19, 1, 51, 93, 51, 80, 54]\n"
+      "[56, 84, 48, 97, 67, 68, 13, 23, 27, 75, 2, 92, 45, 56, 98, 100, 63, 30, 28, 79, 18, 33, 6, 72, 42, 95, 11, 48, 35, 22, 11, 52, 29, 21, 5, 10, 91, 1, 32, 39, 93, 21, 1, 44, 55, 26, 90, 100, 13, 51, 21, 79, 81, 60, 73, 48, 13, 73, 38, 79, 31, 63, 69, 38, 28, 57, 10, 35, 32, 61, 97, 43, 53, 74, 83, 66, 52, 7, 26, 57]\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -154,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 2, 4, 6, 8, 11, 12, 13, 14, 15, 16, 18, 20, 23, 24, 25, 27, 28, 29, 30, 31, 33, 38, 39, 42, 43, 44, 45, 48, 49, 50, 56, 57, 58, 60, 62, 64, 67, 71, 72, 74, 78, 82, 87, 88, 90, 92, 94, 95, 96, 97}\n"
+      "{0, 3, 4, 8, 9, 12, 14, 15, 16, 17, 19, 20, 24, 25, 34, 36, 37, 40, 41, 46, 47, 49, 50, 54, 58, 59, 62, 64, 65, 70, 71, 76, 77, 78, 80, 82, 85, 86, 87, 88, 89, 94, 96, 99}\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -218,11 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "# la relación entre las longitudes de los diferentes sets, porque unos vienen de otros.?¿??¿?¿¿??¿\n",
+    "#ok pero no sé"
    ]
   },
   {
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +282,7 @@
        "False"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +310,7 @@
        "set()"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,8 +333,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -436,10 +440,11 @@
        " 96,\n",
        " 97,\n",
        " 98,\n",
-       " 99}"
+       " 99,\n",
+       " 100}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,27 +464,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "pop() takes no arguments (1 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-40-85251d733220>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: pop() takes no arguments (1 given)"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
     "\n",
-    "set1.pop(0)\n"
+    "set1.pop()\n"
    ]
   },
   {
@@ -495,26 +499,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "pop() takes no arguments (20 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-497036168a49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlist_to_remove\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m19\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m21\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m29\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m39\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m41\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m49\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m51\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m59\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m61\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m69\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m71\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m79\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m81\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m89\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m91\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m99\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: pop() takes no arguments (20 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "{2, 3, 4, 5, 6, 7, 8, 10, 12, 13, 14, 15, 16, 17, 18, 20, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 48, 50, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 90, 92, 93, 94, 95, 96, 97, 98}\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "list_to_remove = set1.pop(1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99)\n",
-    "\n"
+    "print(set1)\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "\n",
+    "for value in list_to_remove:\n",
+    "    if value in set1:\n",
+    "        set1.remove(value)\n",
+    "\n",
+    "print(set1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
